# random-quotes

./: .gitignore  CODE_WALKTHROUGH.md  EXERCISES.md  FRONTEND_TUTORIAL.md  LEARNING.md  QUICK_REFERENCE.md  README.md  TODO.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/commands/: dev.md  ship.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  game_config.yaml  main.py
backend/app/api/: __init__.py  routes.py
backend/app/models/: __init__.py  api.py  common.py  content.py  game.py  websocket.py
backend/app/services/: __init__.py  game.py  llm.py  llm_manager.py  redis_client.py  store.py  websocket.py
backend/tests/: conftest.py  test_api.py  test_game_e2e.py  test_models.py  test_placeholder.py
frontend/: .dockerignore  .env.example  .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: game.ts
frontend/src/assets/: base.css  main.css
frontend/src/components/: ChatWindow.vue  ThemeToggle.vue
frontend/src/composables/: useClipboard.ts
frontend/src/router/: index.ts
frontend/src/services/: websocket.ts
frontend/src/stores/: game.ts  theme.ts
frontend/src/types/: game.ts
frontend/src/utils/: session.ts
frontend/src/views/: GameView.vue  (+2 more)
scripts/: e2e-smoke-test.sh  e2e-smoke-test.ts  package-lock.json  package.json  playwright.config.ts  smoke-test.sh
terraform/: .gitignore  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
(+11 files in other folders)
