[project]
name = "ransom-notes"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "pydantic",
    "toolz",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
