[project]
name = "ransom-notes"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "pydantic",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0",
    "toolz",
    "uvicorn>=0.40.0",
    "websockets>=15.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pytest",
    "ruff>=0.14.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
